finish rm consent election code
