# src/main/java/org/broadinstitute/consent/http/resources/ConsentElectionResource.java
@@ -1,42 +1,0 @@
-package org.broadinstitute.consent.http.resources;
-
-import com.google.inject.Inject;
-import org.broadinstitute.consent.http.models.dto.Error;
-import org.broadinstitute.consent.http.service.ElectionService;
-
-import javax.annotation.security.RolesAllowed;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
-import javax.ws.rs.core.UriInfo;
-
-
-@Path("api/consent/{consentId}/election")
-public class ConsentElectionResource extends Resource {
-
-    private final ElectionService electionService;
-
-    @Inject
-    public ConsentElectionResource(ElectionService electionService) {
-        this.electionService = electionService;
-    }
-
-    @DELETE
-    @Produces(MediaType.APPLICATION_JSON)
-    @Path("/{id}")
-    @RolesAllowed({ADMIN, CHAIRPERSON})
-    public Response deleteElection(@PathParam("consentId") String consentId, @Context UriInfo info, @PathParam("id") Integer id) {
-        try {
-            electionService.deleteElection(id);
-            return Response.status(Response.Status.OK).entity("Election was deleted").build();
-        } catch (Exception e) {
-            return Response.status(Status.NOT_FOUND).entity(new Error(e.getMessage(), Status.NOT_FOUND.getStatusCode())).build();
-        }
-    }
-
-}
